--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      hello
+    </div>
   </body>
 </html>
