--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
-    <title>React App</title>
+    <title>bFd</title>
   </head>
   <body>
     <div id="root">
-      hello world
     </div>
   </body>
 </html>
