change it io real react code

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <title>bFd</title>
+    <meta charset="utf-8">
+    <title>sunnyside</title>
+    <!-- FHF framework file-->
+    <link rel="stylesheet" href="FHF.css" attr>
+    <!-- main style file-->
+    <link rel="stylesheet" href="main.css" attr>
   </head>
   <body>
     <div id="root">
