add contact file

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>sunnyside</title>
     <!-- FHF framework file-->
-    <link rel="stylesheet" href="FHF.css" attr>
+    <link rel="stylesheet" href="FHF.css" attr />
     <!-- main style file-->
-    <link rel="stylesheet" href="main.css" attr>
+    <link rel="stylesheet" href="main.css" attr />
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
   </body>
 </html>
