--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>sunnyside</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root1"></div>
+    <!-- <div id="root2"></div> -->
   </body>
 </html>
